devops/k8s/istio/demo-app/session-4/after/vs-books.yaml

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: books
spec:
  host: books
  subsets:
  - name: v2
    labels:
      version: v2.2

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: books
spec:
  hosts:
  - books
  gateways:
  - course-frontend-gateway
  - mesh
  http:
    - name: "fault injection"
      # fault:
      #   abort:
      #     percentage:
      #       value: 100.0
      #     httpStatus: 500
      route:
      - destination:
          host: books
          subset: v2
