devops/k8s/istio/demo-app/session-4/after/vs-frontend.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: frontend
spec:
  host: frontend
  subsets:
  - name: v2
    labels:
      version: v2.3

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: course-istio
spec:
  hosts:
  - "*"
  gateways:
  - course-frontend-gateway
  http:
  - name: "feature flag"
    match:
    - uri:
        prefix: /frontend-catalog/api/v1/
    rewrite:
        uri: /api/v1/
    headers:
      response:
        set:
          foo: "bar"
      request:
        set:
          bar: "buz"
    route:
    - destination:
        host: frontend
        subset: v2
        port:
          number: 3000
      headers:
        request:
          set:
            bar: "buz1"
        response:
          set:
            foo: "bar1"
    # - headers:
    #     developer:
    #       exact: oleg
    #   uri:
    #     prefix: /frontend-catalog/api/v1/
    # rewrite:
    #     uri: /api/v1/
    # route:
    # - destination:
    #     host: frontend
    #     subset: v2
    #     port:
    #       number: 3000

  # - name: "default"
  #   match:
  #   - uri:
  #       prefix: /frontend-catalog/api/v1/
  #   rewrite:
  #       uri: /api/v1/
  #   route:
  #   - destination:
  #       host: frontend
  #       subset: v2
  #       port:
  #         number: 3000
